syntax = "proto3";

package well_known_types;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/api.proto";
import "google/type/date.proto";

option go_package = "github.com/bavix/gripmock/protogen/example/well_known_types";
service Gripmock {
  // this shows us example on using WKT as dependency
  // api.proto in particular has go_package alias with semicolon
  // "google.golang.org/genproto/protobuf/api;api"
  rpc ApiInfo(google.protobuf.Empty) returns (google.protobuf.Api) {
    option (google.api.http) = {
      post: "/v1/gripmock/api-info"
      body: "*"
    };
  }

  rpc ApiInfoV2 (ApiInfoV2Request) returns (ApiInfoV2Response) {
    option (google.api.http) = {
      post: "/v2/gripmock/api-info"
      body: "*"
    };
  }
}

message ApiInfoV2Request {
  string name = 1;
  google.type.Date time = 2;
}

message ApiInfoV2Response {}
